--- a/layouts/partials/book-cats.html
+++ b/layouts/partials/book-cats.html
@@ -1,26 +1,26 @@
 <nav class="all-tags categories">
   <div class="tag articles">
-    <span>#</span>
+    <span aria-hidden="true">#</span>
     <input id="articles" type="checkbox" name="category" onclick="cat(this)">
     <label for="articles" class="category">articles</label>
   </div>
   <div class="tag comics">
-    <span>#</span>
+    <span aria-hidden="true">#</span>
     <input id="comics" type="checkbox" name="category" onclick="cat(this)">
     <label for="comics" class="category">comics</label>
   </div>
   <div class="tag podcasts">
-    <span>#</span>
+    <span aria-hidden="true">#</span>
     <input id="podcasts" type="checkbox" name="category" onclick="cat(this)">
     <label for="podcasts" class="category">podcasts</label>
   </div>
   <div class="tag tweets">
-    <span>#</span>
+    <span aria-hidden="true">#</span>
     <input id="tweets" type="checkbox" name="category" onclick="cat(this)">
     <label for="tweets" class="category">tweets</label>
   </div>
   <div class="tag videos">
-    <span>#</span>
+    <span aria-hidden="true">#</span>
     <input id="videos" type="checkbox" name="category" onclick="cat(this)">
     <label for="videos" class="category">videos</label>
   </div>
