--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
   </nav>
   <section class="copy">
     <!-- Copyright -->
-    <h5>&copy;&nbsp;{{ time.Now.Format "2006" }}&nbsp;</h5>
+    <p>&copy;&nbsp;{{ time.Now.Format "2006" }}&nbsp;</p>
     <p>{{ .Site.Title }}</p>
   </section>
 </footer>
