--- a/layouts/shortcodes/avatar.html
+++ b/layouts/shortcodes/avatar.html
@@ -1,2 +1,2 @@
 {{ $avatar := resources.Get "img/avatar.jpg" }}
-<img src="{{ $avatar.RelPermalink }}" id="avatar">
+<img src="{{ $avatar.RelPermalink }}" id="avatar" alt="Juan">
