--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -4,12 +4,12 @@
     <nav class="all-tags">
       {{ $s := .Section }}
       {{ range $name, $taxonomy := .Site.Taxonomies.category }}
-        <p class="tag"><span>#</span><a class="meta" href="/{{ $s }}/category/{{ $name }}">{{ $name }}</a></p>
+        <p class="tag"><span aria-hidden="true">#</span><a class="meta" href="/{{ $s }}/category/{{ $name }}">{{ $name }}</a></p>
       {{ end }}
     </nav>
     {{ range .Data.Pages.GroupByDate "2006" }}
     <section class="year-container">
-      <h3 class="title list-date">{{ .Key }}</h3>
+      <h2 class="title list-date">{{ .Key }}</h3>
       <div class="posts-list">
         {{ range .Pages }}
           {{ .Render "li"}}
