Disabling tota11y script.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -184,7 +184,7 @@
   </script>
   {{ end }}
   <!-- a11y -->
-  {{ $tota11y := resources.Get "js/tota11y.js" | minify }}
-  <script src="{{ $tota11y.Permalink }}"></script>
+  <!-- {{ $tota11y := resources.Get "js/tota11y.js" | minify }}
+  <script src="{{ $tota11y.Permalink }}"></script> -->
 </body>
 </html>
