--- a/assets/css/mixins.scss
+++ b/assets/css/mixins.scss
@@ -9,3 +9,7 @@
     @content;
   }
  }
+ @mixin color($property, $varName) {
+  #{$property}: map-get($light, $varName);
+  #{$property}: var(--#{$varName});
+}
