--- a/assets/css/reset.scss
+++ b/assets/css/reset.scss
@@ -43,7 +43,7 @@ p.tag a {
   }
 }
 article p {
-  line-height: 27px;
+  line-height: 1.6rem;
 }
 article,
 main,
@@ -97,16 +97,16 @@ h1, h2, h3, h4 {
   font-weight: 600;
 }
 h1 {
-  font-size: 36px;
+  font-size: 2rem;
 }
 h2 {
-  font-size: 32px;
+  font-size: 1.8rem;
 }
 h3 {
-  font-size: 28px;
+  font-size: 1.6rem;
 }
 h4 {
-  font-size: 24px;
+  font-size: 1.3rem;
 }
 h2, h3, h4 {
   margin-top: 10px;
@@ -140,7 +140,7 @@ p code {
   padding: 0 2px;
 }
 .brand {
-  font-size: 42px;
+  font-size: 2.3rem;
 }
 .brand {
   margin-bottom: 10px;
