--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -34,6 +34,14 @@ body {
   /* iOS 11.2+ */
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  // Types
+  &#dyslexic {
+    font-family: 'Dyslexic', sans-serif;
+    font-size: 16px;
+  }
+  &#rubik {
+    font-family: 'Rubik', sans-serif;
+  }
   // Themes
   &.black {
     --background: #{map-get($black, background)};
@@ -70,14 +78,14 @@ body {
       --background: #{map-get($black, background)};
       --box: #{map-get($black, box)};
       --button: #{map-get($black, button)};
-      --link: #{map-get($black, link)};
-      --meta: #{map-get($black, meta)};
       --text: #{map-get($black, text)};
+      --meta: #{map-get($black, meta)};
+      --link: #{map-get($black, link)};
     }
   }
   // Header
   header#header {
-    @extend %items-flex-end;
+    @extend %items-center;
     @extend %content-space-between;
     min-height: 72px;
     @include media-query-max(570px) {
@@ -86,7 +94,7 @@ body {
     a.home {
       @extend %content-flex-start;
       @extend %flex;
-      @extend %items-flex-end;
+      @extend %items-center;
       @extend %decoration-none;
       height: 42px;
       width: 155px;
@@ -108,17 +116,16 @@ body {
         }
       }
       p {
-        line-height: 18px;
+        line-height: 1.2rem;
         width: 90px;
       }
     }
     nav a {
       @extend %decoration-none;
-      line-height: 18px;
+      line-height: 1rem;
       transition: text-decoration 0.5s ease;
       @include media-query-max(350px) {
-        font-size: 15px;
-        line-height: 15px;
+        line-height: 1rem;
       }
       &:hover {
         text-decoration: underline;
@@ -241,25 +248,6 @@ body {
       @include media-query-max(370px) {
         justify-content: center;
       }
-      article {
-        height: 265px;
-        margin: 0 0 30px;
-        width: 155px;
-        @supports (display:grid) {
-          @extend %content-self-center;
-          margin: 0;
-        }
-        a.cover {
-          width: 150px;
-          img {
-            height: 150px;
-            width: 150px;
-          }
-        }
-        time.date {
-          font-size: 16px;
-        }
-      }
     }
   }
   article {
@@ -269,8 +257,9 @@ body {
       margin-bottom: 15px;
     }
     h2.title {
-      font-size: 36px;
+      font-size: 2rem;
       a {
+        font-size: 2rem;
         @extend %decoration-none;
       }
     }
@@ -303,20 +292,40 @@ body {
       @extend %items-center;
     }
     &.book {
+      height: 265px;
       margin-bottom: 20px;
+      width: 155px;
+      @supports (display:grid) {
+        @extend %content-self-center;
+        margin: 0;
+      }
       &:hover h2.title a {
         @include color(color, link);
       }
+      a.cover {
+        width: 150px;
+        img {
+          height: 150px;
+          width: 150px;
+        }
+      }
       h2.book-title {
-        font-size: 20px;
-        line-height: 20px;
+        font-size: 1.1rem;
+        line-height: 1.2rem;
         margin-bottom: 5px;
+        a {
+          font-size: 1.1rem;
+          line-height: 1.2rem;
+        }
       }
       p.author {
         @include color(color, text);
-        font-size: 16px;
-        line-height: 16px;
+        font-size: .9rem;
+        line-height: .9rem;
         margin-bottom: 10px;
+      }
+      time.date {
+        font-size: .9rem;
       }
     }
     &.book-review {
@@ -332,7 +341,7 @@ body {
         justify-content: center;
       }
       @include media-query-max(340px) {
-        grid-template-rows: 43px 26px 164px repeat(2,auto);
+        grid-template-rows: repeat(3,auto);
       }
       > * {
         grid-column: 2;
@@ -359,11 +368,11 @@ body {
         @extend %items-flex-start;
         grid-row: 1;
         h1.book-title {
-          line-height: 38px;
+          line-height: 2.1rem;
           margin-bottom: 5px;
           @include media-query-max(340px) {
-            font-size: 22px;
-            line-height: 28px;
+            font-size: 1.2rem;
+            line-height: 1.5rem;
           }
         }
         p.author {
@@ -372,8 +381,8 @@ body {
         p.author,
         time.date {
           @include media-query-max(340px) {
-            font-size: 15px;
-            line-height: 15px;
+            font-size: .8rem;
+            line-height: .8rem;
           }
         }
       }
@@ -381,6 +390,43 @@ body {
         grid-row: 4;
         @include media-query-max(900px) {
           grid-column: 1/3;
+        }
+      }
+    }
+  }
+  &#dyslexic {
+    header {
+      min-height: 75px;
+      a#home {
+        p {
+          width: 110px;
+        }
+      }
+      nav.navbar {
+        width: 350px;
+        a.rss {
+          margin-top: 3px;
+        }
+      }
+    }
+    main {
+      &.bookshelf {
+        section.book-list {
+          grid-auto-rows: 275px;
+          article.book {
+            height: 275px;
+            p.author {
+              line-height: 1.1rem;
+            }
+          }
+        }
+      }
+      &.list {
+        article.book-review {
+          p.author,
+          time.date {
+            line-height: 1.1rem;
+          }
         }
       }
     }
@@ -398,16 +444,16 @@ body {
       color: #333;
     }
     h1 {
-      font-size: 28px;
+      font-size: 1.5rem;
     }
     h2 {
-      font-size: 26px;
+      font-size: 1.4rem;
     }
     h3 {
-      font-size: 24px;
+      font-size: 1.3rem;
     }
     h4 {
-      font-size: 20px;
+      font-size: 1.1rem;
     }
     h3, h4 {
       font-weight: normal;
