--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -29,6 +29,26 @@
   font-display: swap;
 }
 @font-face {
+  font-family: 'Dyslexic';
+  font-weight: 400;
+  font-style: normal;
+  src: local(OpenDyslexic),
+       local(OpenDyslexic),
+       url("fonts/OpenDyslexic.woff2") format("woff2"),
+       url("fonts/OpenDyslexic.woff") format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Dyslexic';
+  font-weight: 700;
+  font-style: normal;
+  src: local(OpenDyslexic-Bold),
+       local(OpenDyslexic-Bold),
+       url("fonts/OpenDyslexic-Bold.woff2") format("woff2"),
+       url("fonts/OpenDyslexic-Bold.woff") format("woff");
+  font-display: swap;
+}
+@font-face {
   font-family: 'Plex Mono';
   font-weight: 400;
   font-style: normal;
@@ -47,8 +67,4 @@
        url("fonts/IBMPlexMonoItalic.woff2") format("woff2"),
        url("fonts/IBMPlexMonoItalic.woff") format("woff");
   font-display: swap;
-}
-
-body {
-  font-family: 'Rubik', sans-serif;
 }
