--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -3,6 +3,8 @@ $black: (
   background: #000,
   box: 8px 8px 0 0 #969696,
   button: rgba(#969696,.7),
+  content: rgba(#EB7760,.3),
+  contentBG: lighten(#000,3%),
   link: #EB7760,
   meta: #969696,
   text: #FFF,
@@ -11,6 +13,8 @@ $dark: (
   background: #12151B,
   box: 8px 8px 0 0 #71ADBC,
   button: rgba(#71ADBC,.7),
+  content: rgba(#F2815A,.3),
+  contentBG: lighten(#12151B,3%),
   link: #F2815A,
   meta: #71ADBC,
   text: #9DA1B4,
@@ -19,6 +23,8 @@ $light: (
   background: #FFF,
   box: 8px 8px 0 0 #545454,
   button: rgba(#545454,.7),
+  content: rgba(#A32C14,.3),
+  contentBG: darken(#545454,15%),
   link: #A32C14,
   meta: #545454,
   text: #12151B,
