--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -130,6 +130,8 @@
   <script>
     // UI Switcher
     const body = document.querySelector('body');
+    const ui = document.querySelector('div#ui-options');
+    const sets = document.getElementById('settings');
     const colors = document.querySelectorAll('p.colors');
     const fonts = document.querySelectorAll('p.type');
     function uiSwitcher(item,change,mod) {
@@ -138,7 +140,8 @@
           e.preventDefault();
           var value = option.id;
           body.setAttribute(mod, value);
-          document.getElementById('settings').checked = false;
+          sets.checked = false;
+          ui.classList.toggle('active');
           localStorage.removeItem(change);
           localStorage.setItem(change, value);
         }, false);
@@ -148,6 +151,9 @@
         }
       })
     }
+    sets.addEventListener("click", function(e) {
+      ui.classList.toggle('active');
+    }, false);
     uiSwitcher(colors,'theme','class');
     uiSwitcher(fonts,'type','id');
     // Console Stuff
